--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -10,11 +10,31 @@
   --light-gray: #f7f7f7;
   --text-dark: #333;
 }
+html {
+  overflow: overlay;
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  scrollbar-width: thin;
+  scrollbar-color: #c03e7b #f0f0f0;
+}
+
+/* Chrome, Edge, Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #c03e7b;
+  border-radius: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #f0f0f0;
 }
 
 a {
@@ -50,9 +70,25 @@ main {
   border-radius: 15px;
   box-shadow: 0 4px 4px var(--border-color);
   padding: 40px;
-  width: 100vw;
+  width: calc(100% - 64px); /* start with collapsed sidebar width */
   height: 100vh;
   text-align: center;
   display: flex;
   flex: 1;
+  transition: margin-left 0.3s ease, width 0.3s ease;
+  margin-left: 64px; /* initial collapsed sidebar offset */
+  box-sizing: border-box;
+}
+
+.toggle-btn,
+.toggle-name-btn,
+.toggle-desc-btn,
+.toggle-order-name-btn {
+  background: none;
+  border: none;
+  color: var(--primary-color);
+  cursor: pointer;
+  font-size: 0.8rem;
+  margin-left: 5px;
+  text-decoration: none;
 }
